# sakls

./: .clang-tidy  .cmake-format.py  .gitmodules  CMakeLists.txt
capi/: CMakeLists.txt
capi/include/sakls-c/: ExternC.h  Syntax.h
capi/include/sakls/CAPI/: ExternC.h  LayoutAPI.h  LayoutPlugin.h  Syntax.h
docs/: CMakeLists.txt  doxygen-mainpage.dox
include/sakls/: Engine.hpp  EngineAPI.h  ExternC.h  Instance.hpp  Layout.hpp  LayoutAPI.h  LayoutAPI.hpp  LayoutPlugin.h  Schema.hpp  SchemaSerialization.hpp  Syntax.h  Syntax.hpp  SyntaxAPI.h  SyntaxAPI.hpp
include/sakls-c/: Engine.h  Schema.h  Syntax.h
include/sakls-c/LayoutBackends/: XkbSwitch.h
layout_backends/: CMakeLists.txt
layout_backends/xkb-switch/: CMakeLists.txt
layout_backends/xkb-switch/include/sakls/LayoutBackends/: XkbSwitch.hpp
lib/: CMakeLists.txt  Engine.cpp  Schema.cpp
lib/LayoutBackends/: CMakeLists.txt
lib/LayoutBackends/XkbSwitch/: CMakeLists.txt  XkbSwitchBackend.cpp  XkbSwitchCAPI.cpp  XkbSwitchStub.cpp
lib/include/sakls/: Engine.hpp  Layout.hpp  LayoutAPI.hpp  Schema.hpp  SchemaSerialization.hpp  Syntax.hpp
lib/src/: Engine.cpp  LayoutAPI.cpp
src/: Engine.cpp  EngineAPI.cpp  LayoutAPI.cpp  SyntaxAPI.cpp
unittests/: BinaryDir.h.in  CMakeLists.txt  EngineTest.cpp  EngineTest.hpp  EngineTests.cpp  LayoutPluginTest.cpp  MockLayoutAPI.cpp  MockLayoutAPI.hpp  MockLayoutBackend.cpp  MockLayoutBackend.hpp  MockLayoutPlugin.cpp  MockSyntaxAPI.cpp  MockSyntaxAPI.hpp  SchemaSerialization.cpp
